Use diamonds
- Use valueOf()
- Add @Override
- Use for-each
- Use multi-catch
- Inline local temporary variable
- Simpler comparison